Css fix for page jumping on cat view

--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -20,7 +20,7 @@ body{
 }
 
 #catDrop {
-    max-height: 250px;
+    max-height: 220px;
     overflow-y: auto;
 }
 
